# agents-soul

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PLAN-agents-soul.md  PLAN.md  README.md  grove.toml  install.sh
.beads/: issues.jsonl
.beads/.br_history/: issues.20260329_020936.jsonl  issues.20260329_165639.jsonl  issues.20260329_170816.jsonl  issues.20260329_171828.jsonl  issues.20260329_172650.jsonl  issues.20260329_180305.jsonl  issues.20260329_180457.jsonl  issues.20260329_180611.jsonl
.github/workflows/: ci.yml
.grove/: grove.db  startup_prompt.md
.scope/: index.db
.why/: cache.jsonl
docs/: architecture.md  behavior-policy.md  openclaw-reference-notes.md  soul-model.md
examples/workspaces/: README.md
scripts/: run-mcp-stdio-smoke.sh
src/: lib.rs  main.rs
src/adaptation/: bounds.rs  ema.rs  mod.rs  notes.rs  overrides.rs  reducer.rs  reset.rs  store.rs
src/api/: compose.rs  explain.rs  heuristics.rs  interactions.rs  mod.rs  reset.rs  router.rs  traits.rs
src/app/: config.rs  deps.rs  errors.rs  hash.rs  mod.rs  runtime.rs  tracing.rs
src/cli/: compose.rs  configure.rs  explain.rs  inspect.rs  mod.rs  record.rs  reset.rs
src/domain/: adaptation.rs  (+15 more)
templates/: context_full.j2  explain.j2  prompt_prefix.j2
tests/: bootstrap_surface.rs  boundary_parity.rs  compose_modes.rs  domain_contracts.rs  mcp_read_tools.rs  mcp_stdio_contracts.rs  reader_normalization.rs  rendering_snapshots.rs  storage_fixtures.rs  transport_error_mapping.rs  transport_parity.rs  upstream_repo_contracts.rs  workspace_config_examples.rs
(+41 files in other folders)
