[package]
name = "agents-soul"
version = "0.1.0"
edition = "2024"
description = "Behavioral composition layer for the agents-world ecosystem"
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "agents-soul"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
